--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                 <div class="block-service__block-headline"><img class="block-service__headline-pic" src="../../../build/img/our_services/Слой_x0020.png">
                   <div class="block-service__headline plastic-window-width">Установка пластиковых окон</div>
                 </div>
-                <div class="block-service__text">Устанавливаем пластиковые окна Rehau от проверенного производителя с гарантией качества</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""></a>
+                <div class="block-service__text">Устанавливаем пластиковые окна Rehau от проверенного производителя с гарантией качества</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""><img class="block-service__arrow-red" src="build/img/our_services/arrow_hover.svg" alt=""></a>
               </div>
             </div>
-            <div class="block-service"> <img class="block-service-img" src="../../../build/img/our_services/Rectangle_21.png" alt="picture">
+            <div class="block-service"> <img class="block-service-img" src="build/img/our_services/Rectangle_21.png" alt="picture">
               <div class="block-service__text-service"> 
                 <div class="block-service__block-headline"><img class="block-service__headline-pic" src="build/img/our_services/Слой_x0021.png">
                   <div class="block-service__headline plastic-balcony-width">Остекление балконов и лоджий</div>
                 </div>
                 <div class="block-service__text">
-                  Занимаемся остеклением и отделкой балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""></a>
+                  Занимаемся остеклением и отделкой балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""><img class="block-service__arrow-red" src="build/img/our_services/arrow_hover.svg" alt=""></a>
               </div>
             </div>
             <div class="block-service"> <img class="block-service-img" src="build/img/our_services/Rectangle_23.png" alt="picture">
@@ -95,7 +95,7 @@
                   <div class="block-service__headline plastic-cottage-width">Остекление коттеджей и дач</div>
                 </div>
                 <div class="block-service__text">
-                  Остекление и отделка под ключ: от коттеджей и дач до террас и беседок. Выделяем личноготехнолога под каждый объект</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""></a>
+                  Остекление и отделка под ключ: от коттеджей и дач до террас и беседок. Выделяем личноготехнолога под каждый объект</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""><img class="block-service__arrow-red" src="build/img/our_services/arrow_hover.svg" alt=""></a>
               </div>
             </div>
             <div class="block-service"> <img class="block-service-img corporate-position-width" src="build/img/our_services/Rectangle_25.png" alt="picture">
@@ -104,7 +104,78 @@
                   <div class="block-service__headline plastic-corporate-width">Остекление корпоративных объектов</div>
                 </div>
                 <div class="block-service__text">
-                  Реализуем сложные проекты по остеклению торговых центров,ресторанов, производственных помещений и офисов</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""></a>
+                  Реализуем сложные проекты по остеклению торговых центров,ресторанов, производственных помещений и офисов</div><a class="block-service__link" href#><img class="block-service__arrow" src="build/img/our_services/arrow-right-service.svg" alt=""><img class="block-service__arrow-red" src="build/img/our_services/arrow_hover.svg" alt=""></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="quality-items-block">
+      <div class="quality-items-block__content">
+        <div class="quality-items-block__wrap">
+          <div class="quality-items-block__shadow"></div><img class="quality-items__headline" src="../../../build/img/quality-items-block/headline_pic.png" alt="Заголовок">
+          <div class="quality-items-block__advances-block">
+            <div class="quality-items-block__advance"> <img class="quality-items-block__advance-pic" src="../../../build/img/quality-items-block/quality-items-block__advances-block/advance-item-pic.svg" alt="advance">
+              <p class="quality-items-block__text certify-width">Сертифицированный производитель Rehau</p>
+            </div>
+            <div class="quality-items-block__advance"> <img class="quality-items-block__advance-pic" src="../../../build/img/quality-items-block/quality-items-block__advances-block/advance-item-pic-2.svg" alt="advance">
+              <p class="quality-items-block__text innovation-width">Инновационный оконный завод</p>
+            </div>
+            <div class="quality-items-block__advance"> <img class="quality-items-block__advance-pic" src="../../../build/img/quality-items-block/quality-items-block__advances-block/advance-item-pic-3.svg" alt="advance">
+              <p class="quality-items-block__text lider-profil-width">Лидер по переработке профилей Rehau в России</p>
+            </div>
+            <div class="quality-items-block__advance"> <img class="quality-items-block__advance-pic" src="../../../build/img/quality-items-block/quality-items-block__advances-block/advance-item-pic-4.svg" alt="advance">
+              <p class="quality-items-block__text hi-technological-width">Высокотехнологичное автоматизированное оборудование</p>
+            </div>
+            <div class="quality-items-block__advance"> <img class="quality-items-block__advance-pic" src="../../../build/img/quality-items-block/quality-items-block__advances-block/advance-item-pic-5.svg" alt="advance">
+              <p class="quality-items-block__text product-width">Широкий ассортимент продукции</p>
+            </div>
+          </div>
+        </div><a class="offer-calc" href="#">Заказать расчет</a>
+      </div>
+    </div>
+    <div class="contacts">
+      <div class="content">
+        <div class="contacts__wrap">
+          <div class="contacts__headline">Контакты</div>
+          <div class="contacts__common-block">
+            <div class="contacts__address-block"> 
+              <p class="contacts__address-block_consult-text"> Бесплатная консультация:</p>
+              <div class="contacts__phones-block">
+                <div class="phone-block"> <img class="contacts__phone-img" src="../../../build/img/contacts/phone-icon.svg" alt="phone">
+                  <div class="number-phone"> 8 (4932) 34 - 31 - 40         </div>
+                </div>
+                <div class="phone-block">						
+                  <div class="number-phone"> 8 (905) 109 - 31 - 40</div>
+                </div>
+              </div>
+              <div class="address-block"><img class="contacts__address-img" src="../../../build/img/contacts/location.svg" alt="location">
+                <p class="address">г. Иваново, ул. Генерала Хлебникова, д.54, оф.303</p>
+              </div>
+              <div class="e-mail-block"><img class="contacts__e-mail-img" src="../../../build/img/contacts/mail-icon.svg" alt="location">
+                <p class="address">okna@haus.ru</p>
+              </div>
+              <div class="contacts__social-block">
+                <div class="contacts__text">
+                  Установку должны выполнять только эксперты. Нам доверяют сотни семей.Узнайте поробнее, какие решения вам подходят. Вы можете приобрести недорогие товары 
+                  при гарантированно высоком качестве.
+                </div>
+                <div class="social-list"><a class="social-block-item"><img class="socail-frame" src="build/img/contacts/social_icons/frame_social.svg" alt=""><img class="socail-icon" src="build/img/contacts/social_icons/В.png" alt=""></a><a class="social-block-item"><img class="socail-frame" src="build/img/contacts/social_icons/frame_social.svg" alt=""><img class="socail-icon" src="build/img/contacts/social_icons/frame_social.svg" alt=""></a><a class="social-block-item"><img class="socail-frame" src="build/img/contacts/social_icons/frame_social.svg" alt=""><img class="socail-icon" src="build/img/contacts/social_icons/insta.svg" alt=""></a><a class="social-block-item"><img class="socail-frame" src="build/img/contacts/social_icons/frame_social.svg" alt=""><img class="socail-icon" src="build/img/contacts/social_icons/play.svg" alt=""></a><a class="social-block-item"><img class="socail-frame" src="build/img/contacts/social_icons/frame_social.svg" alt=""><img class="socail-icon" src="build/img/contacts/social_icons/tw.svg" alt=""></a></div>
+              </div>
+            </div>
+            <div class="contacts__form-block-block-picture"> <img class="contacts__form-picture" src="build/img/contacts/contacts-form-workers.png">
+              <div class="contacts__form-block">					
+                <div class="contacts__form-wrap">
+                  <p class="contacts__form_headline"> Остались вопросы?</p>
+                  <input class="input-form" type="text" name="" placeholder="Ваше имя">
+                  <input class="input-form" type="mail" name="" placeholder="E-mail">
+                  <input class="input-form height" type="text" name="" placeholder="Ваш отзыв">
+                  <div class="contacts__checkbox-block">
+                    <input class="checkbox-modify" type="checkbox" name="policy" placeholder="E-mail" value="">
+                    <label class="contacts__checkbox" for="policy">Я согласен(на) на обработку <span class="policy_confidential" >персональных данных</span></label>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
