верстка блока questions-answer-block

--- a/index.html
+++ b/index.html
@@ -361,6 +361,52 @@
         </div>
       </div>
     </div>
+    <div class="questions-answer-block">
+      <div class="content"> 
+        <div class="questions-answer-block__wrap"> 
+          <h2>Вопрос-ответ</h2>
+          <div class="questions-answer__list">
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Сколько по времени занимает изготовление пластиковых окон?</a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Какие существуют способы оплаты?</a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Где я могу посмотреть образцы?</a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Зачем вызывать замерщика? Я могу дать размеры</a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Хотелось бы отделать балкон. Поможете?</a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+            <div class="questions-answer__item"><a class="questions-answer__link" href="#">
+                 Мне надо нанимать грузчиков для подъема?						
+                <p class="answer">Нет, команда мастеров все сами аккуратно доставят и внесут.</p></a>
+              <svg class="arrow-bottom" xmlns="http://www.w3.org/2000/svg" id="arrow" width="30" height="17" viewbox="0 0 30 17" fill="none">
+                <path d="M1 1.70605L15 15.7061L29 1.70605" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="contacts">
       <div class="content">
         <div class="contacts__wrap">
@@ -413,5 +459,6 @@
     <script src="build/tabs/carousel-18/js/bootstrap.min.js"></script>
     <script src="build/tabs/carousel-18/js/owl.carousel.min.js"></script>
     <script src="build/tabs/carousel-18/js/main.js"></script>
+    <script src="build/js/questions-answer__list.js"></script>
   </body>
 </html>
