--- a/pages/pop-ups/pop-up-2.html
+++ b/pages/pop-ups/pop-up-2.html
@@ -15,9 +15,11 @@
         <div class="pop-up__block-slider-and-headline">
           <div class="pop-up__block-slider"><img src="../../../../build/img/pop-ups/pop_pic.png" alt="slider-pic"></div>
           <div class="pop-up__headline-block"> 
-            <div class="pop-up__headline">Установка пластиковых окон</div>
-            <div class="pop-up__headline-describe">
-               Пластиковые окна Rehau </br> от проверенного производителя с гарантией качества</div>
+            <div class="pop-up__headline">Остекление балконов и лоджий</div>
+            <div class="pop-up__headline-describe width-pop-up--modify">
+               Занимаемся остеклением и отделкой<br> балконов и лоджий. 
+              Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты
+            </div>
             <div class="pop-up__block-links"> 
               <div class="pop-up__request-measurement-block">
                 <svg class="pop-up__request-measurement-img" xmlns="http://www.w3.org/2000/svg" width="23" height="20" viewbox="0 0 23 20" fill="none">
@@ -53,48 +55,47 @@
         <div class="pop-up__block_product-range-blocks"> 
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/plastic_window.svg" alt="Пластиковые окна">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Пластиковые окна </div>
+              <div class="product-range-headline">Тёплое остекление</div>
               <div class="product-range-describe">
-                 Использование ламинационных окон, ламинации в массе, 3д-ламинации, а также покраска окон. </div>
+                  Теплое остекление — возможность сделать из балконаили лоджии полноценное жилое помещение.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/window_sills.svg" alt="Ламинация">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Ламинация</div>
+              <div class="product-range-headline">Холодное остекление</div>
               <div class="product-range-describe">
-                  Пластиковые окна могут быть любого нужного вам цвета. Внутри и снаружи.</div>
+                   Холодное остекление рекомендовано в случаях, когда балкон или лоджия используются для хранения вещей.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/window_sills.svg" alt="Подоконники">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Подоконники</div>
+              <div class="product-range-headline">Панорамное остекление</div>
               <div class="product-range-describe">
-                  Качественный подоконник не царапается, выдерживает большие нагрузки и будет служить вам долгие годы.</div>
+                   Остекление от пола до потолка, дающее максимальное естественное освещение и прекрасный обзор окрестностей.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/color_hooks.svg" alt="Цветные ручки">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Цветные ручки</div>
-              <div class="product-range-describe">
-                  Оригинальные оконные ручки подчеркнут дизайн окна. Подберем оптимальный цвет ручек в зависимости от цвета всей конструкции.</div>
+              <div class="product-range-headline">Остекление с выносом</div>
+              <div class="product-range-describe">  Способ увеличения площади и объема балкона или лоджии.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/Ventilators.svg" alt="Проветриватели">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Проветриватели</div>
+              <div class="product-range-headline">Остекление с крышей</div>
               <div class="product-range-describe">
-                  Постоянное обновление воздуха в комнате снижает риск аллергии, улучшает сон и благоприятно влияет на самочувствие.</div>
+                    Строительство крыши для домов с высоким потолком и квартир,расположенных на последних этажах.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/Mosquito_nets.svg" alt="Москитные сетки">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Москитные сетки</div>
+              <div class="product-range-headline">Объединение с комнатой</div>
               <div class="product-range-describe">
-                  Нежеланные насекомые останутся на улице, а ваша кошка - в квартире. Устанавливаем сетки для пластиковых окон любых форм и размеров.</div>
+                  Перепланировка квартиры, дающая дополнительные метры полезной площади и улучшающая жилищные условия.</div>
             </div>
           </div>
         </div>
-        <div class="pic-corner-block"><img class="pic-corner" src="../../../../build/img/pop-ups/plastic_window-install-img.png" alt="plastic_window-install"></div>
+        <div class="pic-corner-block"><img class="pic-corner" src="../../../../build/img/pop-ups/pop-up-2-pic.png" alt="plastic_window-install"></div>
       </div>
     </div>
   </body>
