--- a/pages/pop-ups/pop-up-3.html
+++ b/pages/pop-ups/pop-up-3.html
@@ -13,11 +13,11 @@
       </svg>
       <div class="pop-up__wrap"> 
         <div class="pop-up__block-slider-and-headline">
-          <div class="pop-up__block-slider"><img src="../../../../build/img/pop-ups/pop_pic.png" alt="slider-pic"></div>
+          <div class="pop-up__block-slider"><img src="../../../../build/img/pop-ups/cottage-img.png" alt="slider-pic"></div>
           <div class="pop-up__headline-block"> 
-            <div class="pop-up__headline">Установка пластиковых окон</div>
-            <div class="pop-up__headline-describe">
-               Пластиковые окна Rehau </br> от проверенного производителя с гарантией качества</div>
+            <div class="pop-up__headline">Остекление коттеджей и дач</div>
+            <div class="pop-up__headline-describe width-pop-up--modify">
+               Остекление и отделка под ключ: от коттеджей <br>и дач до террас и беседок. Выделяем личного технолога под каждый объект.</div>
             <div class="pop-up__block-links"> 
               <div class="pop-up__request-measurement-block">
                 <svg class="pop-up__request-measurement-img" xmlns="http://www.w3.org/2000/svg" width="23" height="20" viewbox="0 0 23 20" fill="none">
@@ -53,48 +53,47 @@
         <div class="pop-up__block_product-range-blocks"> 
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/plastic_window.svg" alt="Пластиковые окна">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Пластиковые окна </div>
+              <div class="product-range-headline">Цветные окна</div>
               <div class="product-range-describe">
-                 Использование ламинационных окон, ламинации в массе, 3д-ламинации, а также покраска окон. </div>
+                   Использование ламинационных окон, ламинации в массе, 3д-ламинации, а также покраска окон.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/window_sills.svg" alt="Ламинация">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Ламинация</div>
+              <div class="product-range-headline">Фигурные окна</div>
               <div class="product-range-describe">
-                  Пластиковые окна могут быть любого нужного вам цвета. Внутри и снаружи.</div>
+                    Арочные окна, окна трапеции, треугольные окна,круглые и многоугольные окна</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/window_sills.svg" alt="Подоконники">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Подоконники</div>
+              <div class="product-range-headline">Алюминиевые конструкции</div>
               <div class="product-range-describe">
-                  Качественный подоконник не царапается, выдерживает большие нагрузки и будет служить вам долгие годы.</div>
+                   Идеальный вариант для большой площади остекления:зимние сады, террасы и т.п..</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/color_hooks.svg" alt="Цветные ручки">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Цветные ручки</div>
-              <div class="product-range-describe">
-                  Оригинальные оконные ручки подчеркнут дизайн окна. Подберем оптимальный цвет ручек в зависимости от цвета всей конструкции.</div>
+              <div class="product-range-headline">Деревянные окна</div>
+              <div class="product-range-describe roller_shutters">
+                  Экологичное и натуральное решение для остекления любого объекта.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/Ventilators.svg" alt="Проветриватели">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Проветриватели</div>
+              <div class="product-range-headline">Портальные решения</div>
               <div class="product-range-describe">
-                  Постоянное обновление воздуха в комнате снижает риск аллергии, улучшает сон и благоприятно влияет на самочувствие.</div>
+                Эксклюзивные дверные и балконные раздвижные конструкции для элитных квартир и респектабельных домов,обеспечивающие панорамный вид и экономящие пространство.</div>
             </div>
           </div>
           <div class="pop-up__block_product-range-block"> <img class="pop-up__img" src="../../../../build/img/pop-ups/Mosquito_nets.svg" alt="Москитные сетки">
             <div class="product-range-text-block"> 
-              <div class="product-range-headline">Москитные сетки</div>
-              <div class="product-range-describe">
-                  Нежеланные насекомые останутся на улице, а ваша кошка - в квартире. Устанавливаем сетки для пластиковых окон любых форм и размеров.</div>
+              <div class="product-range-headline">Рольставни и ворота</div>
+              <div class="product-range-describe roller_shutters"> Защитные рольставни для частных домов, роллетные ворота</div>
             </div>
           </div>
         </div>
-        <div class="pic-corner-block"><img class="pic-corner" src="../../../../build/img/pop-ups/plastic_window-install-img.png" alt="plastic_window-install"></div>
+        <div class="pic-corner-block"><img class="pic-corner" src="../../../../build/img/pop-ups/cottege-img-corner.png" alt="plastic_window-install"></div>
       </div>
     </div>
   </body>
