Верстка поп-ап окон

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="build/tabs/carousel-18/css/owl.carousel.min.css">
     <link rel="stylesheet" href="build/tabs/carousel-18/css/animate.css">
     <link rel="stylesheet" href="build/tabs/carousel-18/css/carousel.css">
+    <link rel="stylesheet" href="build/sliders/slider_sertificates/slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.css">
   </head>
   <title>Document</title>
   <body> 
@@ -246,52 +248,41 @@
             </div>
             <div class="media-29101 d-md-flex w-100">
               <div class="about-company__information-block__content">
-                <div class="about-company__information-block"><img class="about-company__logo" src="build/img/header/logo.svg" alt="">
-                  <p class="about-company__text">
-                    &Mcy;&ycy; &pcy;&ocy;&mcy;&ocy;&gcy;&acy;&iecy;&mcy; &kcy;&lcy;&icy;&iecy;&ncy;&tcy;&acy;&mcy; &pcy;&ocy;&dcy;&bcy;&icy;&rcy;&acy;&tcy;&softcy; &rcy;&iecy;&shcy;&iecy;&ncy;&icy;&yacy;, &ucy;&chcy;&icy;&tcy;&ycy;&vcy;&acy;&yacy; &pcy;&ocy;&zhcy;&iecy;&zhcy;&iecy;&lcy;&acy;&ncy;&icy;&yacy; &kcy;
-                    &khcy;&acy;&rcy;&acy;&kcy;&tcy;&iecy;&rcy;&icy;&scy;&tcy;&icy;&kcy;&acy;&mcy; &ocy;&kcy;&ncy;&acy; &icy; &iecy;&gcy;&ocy; &scy;&tcy;&ocy;&icy;&mcy;&ocy;&scy;&tcy;&icy;. &Ocy;&kcy;&ncy;&ocy; - &ecy;&tcy;&ocy; &ocy;&bcy;&hardcy;&iecy;&kcy;&tcy;, &kcy;&ocy;&tcy;&ocy;&rcy;&ycy;&mcy; &Vcy;&ycy; &bcy;&ucy;&dcy;&iecy;&tcy;&iecy; &pcy;&ocy;&lcy;&softcy;&zcy;&ocy;&vcy;&acy;&tcy;&softcy;&scy;&yacy; &mcy;&ncy;&ocy;&gcy;&ocy; &lcy;&iecy;&tcy;,
-                    &pcy;&ocy;&ecy;&tcy;&ocy;&mcy;&ucy;
-                    &dcy;&lcy;&yacy; &ncy;&acy;&scy; &ocy;&chcy;&iecy;&ncy;&softcy; &vcy;&acy;&zhcy;&ncy;&ocy;, &chcy;&tcy;&ocy;&bcy;&ycy; &Vcy;&ycy; &scy;&dcy;&iecy;&lcy;&acy;&lcy;&icy; &pcy;&rcy;&acy;&vcy;&icy;&lcy;&softcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;.
-                  </p>
-                </div>
-                <div class="about-company__block-video"><img class="block-video" src="build/img/about-company/play-icon.svg"></div>
-              </div>
-              <div class="text">
-                <div class="about-company__advantages-wrap">
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/prof.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&pcy;&rcy;&ocy;&fcy;&iecy;&scy;&scy;&icy;&ocy;&ncy;&acy;&lcy;&icy;&zcy;&mcy; </div>
-                      <div class="term-full">&Bcy;&rcy;&icy;&gcy;&acy;&dcy;&acy; &pcy;&rcy;&ocy;&fcy;&iecy;&scy;&scy;&icy;&ocy;&ncy;&acy;&lcy;&softcy;&ncy;&ycy;&khcy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&ocy;&vcy; &pcy;&ocy; &mcy;&ocy;&ncy;&tcy;&acy;&zhcy;&ucy; &icy; &ocy;&bcy;&scy;&lcy;&ucy;&zhcy;&icy;&vcy;&acy;&ncy;&icy;&yucy;</div>
+                <div class="about-company__information-block">
+                  <div class="about-company__reviews-block">
+                    <div class="about-company__reviews-block_name-block"> 
+                      <div class="about-company__name">Раиса Михайлова</div>
+                      <div class="about-company__contract"> 24.06.2021     Договор №123456</div>
+                      <div class="about-company__leave-review-block">
+                        <svg class="leave-review-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewbox="0 0 27 24" fill="none">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.75H23.75C25 0.75 26.25 2 26.25 4.5V17C26.25 18.25 25 19.5 23.75 19.5H20C20 19.5 21.25 22 17.5 23.25C18.75 22 16.25 19.5 16.25 19.5H5C2.5 19.5 1.25 18.25 1.25 17V4.5C1.25 2 2.5 0.75 5 0.75V0.75Z" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 6.99994H22.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 10.75H13.75" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                          <path d="M6.25 14.5H17.5" stroke="white" stroke-width="1.5" stroke-miterlimit="22.9256" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg><a class="about-company__leave-review">Оставить отзыв</a>
+                      </div>
                     </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/cost.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&TScy;&iecy;&ncy;&ocy;&ocy;&bcy;&rcy;&acy;&zcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;</div>
-                      <div class="term-full">&Lcy;&ucy;&chcy;&shcy;&icy;&iecy; &tscy;&iecy;&ncy;&ycy; &ncy;&acy; &rcy;&ycy;&ncy;&kcy;&iecy; &pcy;&lcy;&acy;&scy;&tcy;&icy;&kcy;&ocy;&vcy;&ycy;&khcy; &ocy;&kcy;&ocy;&ncy; </div>
+                    <div class="about-company__reviews-slider_block-comment">
+                      Огромное СПАСИБО всей команде Дизайн-Окно!В июне 2021 заказывала переостекление + отделка балкона первый раз и так все удачно
+                      - быстро, качественно. Все прошло отлично, в соответствии с условиями договора.
+                      Замерщик приехал как оговорено без опозданий, произвел замер лазерным уровнем, 
+                      все подробно рассказал по профилю и комплектующим. Предоплата составила 20%, 
+                      остаток - по факту. Соотношение цена/качество в сравнении с конкурентами.
+                      Доставка точно в срок, за 3 дня все установили. Итог - красивые окна. 
+                      Будем зимой проверять на прочность :)
+                      Большая благодарность за отлично проведённую работу!
+                      Замерщик по вызову пришёл быстро, всё хорошо объяснил , окна пришли в 
+                      соответствии со согласованной датой, поднятие в квартиру прошла очень хорошо , 
+                      монтажники справились со своей работой на отлично!  Все прошло в позитиве, 
+                      соотношение цены и качества хорошее. Отличная команда! Спасибо!!!
                     </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/mobility.svg" alt="professionality">
-                    <div class="advantage-describes mobilty-width">
-                      <div class="term-mobilty-width">&Mcy;&ocy;&bcy;&icy;&lcy;&softcy;&ncy;&ocy;&scy;&tcy;&softcy; </div>
-                      <div class="term-full-mobilty">&Zcy;&acy;&kcy;&lcy;&yucy;&chcy;&iecy;&ncy;&icy;&iecy; &dcy;&ocy;&gcy;&ocy;&vcy;&ocy;&rcy;&acy; &ncy;&acy; &dcy;&ocy;&mcy;&ucy; </div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/loyalty.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Lcy;&ocy;&yacy;&lcy;&softcy;&ncy;&ocy;&scy;&tcy;&softcy;</div>
-                      <div class="term-full">99% &kcy;&lcy;&icy;&iecy;&ncy;&tcy;&ocy;&vcy; &rcy;&iecy;&kcy;&ocy;&mcy;&iecy;&ncy;&dcy;&ucy;&yucy;&tcy; &ncy;&acy;&scy; &scy;&vcy;&ocy;&icy;&mcy; &dcy;&rcy;&ucy;&zcy;&softcy;&yacy;&mcy; </div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/fast.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Scy;&kcy;&ocy;&rcy;&ocy;&scy;&tcy;&softcy;</div>
-                      <div class="term-full">&Kcy;&ocy;&rcy;&ocy;&tcy;&kcy;&icy;&iecy; &scy;&rcy;&ocy;&kcy;&icy; &ucy;&scy;&tcy;&acy;&ncy;&ocy;&vcy;&kcy;&icy; &icy;&zcy;&dcy;&iecy;&lcy;&icy;&jcy;</div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/quality.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Scy;&lcy;&ucy;&zhcy;&bcy;&acy; &kcy;&acy;&chcy;&iecy;&scy;&tcy;&vcy;&acy;</div>
-                      <div class="term-full-quality">&Bcy;&iecy;&zcy;&ucy;&pcy;&rcy;&iecy;&chcy;&ncy;&ocy;&iecy; &kcy;&acy;&chcy;&iecy;&scy;&tcy;&vcy;&ocy; &icy; &kcy;&ocy;&ncy;&tcy;&rcy;&ocy;&lcy;&softcy; &icy;&zcy;&dcy;&iecy;&lcy;&icy;&jcy; &Pcy;&Vcy;&KHcy;</div>
+                    <div class="about-company__reviews-slider_control"> 
+                      <svg class="reviews-slider_control-left" xmlns="http://www.w3.org/2000/svg" width="26" height="49" viewbox="0 0 26 49" fill="none">
+                        <path d="M25.25 0.5L1.25 24.5L25.25 48.5" stroke="#9494A8"></path>
+                      </svg>
+                      <svg class="reviews-slider_control-right" xmlns="http://www.w3.org/2000/svg" width="26" height="49" viewbox="0 0 26 49" fill="none">
+                        <path d="M1.25 0.5L25.25 24.5L1.25 48.5" stroke="#9494A8"></path>
+                      </svg>
                     </div>
                   </div>
                 </div>
@@ -299,53 +290,18 @@
             </div>
             <div class="media-29101 d-md-flex w-100">
               <div class="about-company__information-block__content">
-                <div class="about-company__information-block"><img class="about-company__logo" src="build/img/header/logo.svg" alt="">
-                  <p class="about-company__text">
-                    &Mcy;&ycy; &pcy;&ocy;&mcy;&ocy;&gcy;&acy;&iecy;&mcy; &kcy;&lcy;&icy;&iecy;&ncy;&tcy;&acy;&mcy; &pcy;&ocy;&dcy;&bcy;&icy;&rcy;&acy;&tcy;&softcy; &rcy;&iecy;&shcy;&iecy;&ncy;&icy;&yacy;, &ucy;&chcy;&icy;&tcy;&ycy;&vcy;&acy;&yacy; &pcy;&ocy;&zhcy;&iecy;&zhcy;&iecy;&lcy;&acy;&ncy;&icy;&yacy; &kcy;
-                    &khcy;&acy;&rcy;&acy;&kcy;&tcy;&iecy;&rcy;&icy;&scy;&tcy;&icy;&kcy;&acy;&mcy; &ocy;&kcy;&ncy;&acy; &icy; &iecy;&gcy;&ocy; &scy;&tcy;&ocy;&icy;&mcy;&ocy;&scy;&tcy;&icy;. &Ocy;&kcy;&ncy;&ocy; - &ecy;&tcy;&ocy; &ocy;&bcy;&hardcy;&iecy;&kcy;&tcy;, &kcy;&ocy;&tcy;&ocy;&rcy;&ycy;&mcy; &Vcy;&ycy; &bcy;&ucy;&dcy;&iecy;&tcy;&iecy; &pcy;&ocy;&lcy;&softcy;&zcy;&ocy;&vcy;&acy;&tcy;&softcy;&scy;&yacy; &mcy;&ncy;&ocy;&gcy;&ocy; &lcy;&iecy;&tcy;,
-                    &pcy;&ocy;&ecy;&tcy;&ocy;&mcy;&ucy;
-                    &dcy;&lcy;&yacy; &ncy;&acy;&scy; &ocy;&chcy;&iecy;&ncy;&softcy; &vcy;&acy;&zhcy;&ncy;&ocy;, &chcy;&tcy;&ocy;&bcy;&ycy; &Vcy;&ycy; &scy;&dcy;&iecy;&lcy;&acy;&lcy;&icy; &pcy;&rcy;&acy;&vcy;&icy;&lcy;&softcy;&ncy;&ycy;&jcy; &vcy;&ycy;&bcy;&ocy;&rcy;.
-                  </p>
-                </div>
-                <div class="about-company__block-video"><img class="block-video" src="build/img/about-company/play-icon.svg"></div>
-              </div>
-              <div class="text">
-                <div class="about-company__advantages-wrap">
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/prof.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&pcy;&rcy;&ocy;&fcy;&iecy;&scy;&scy;&icy;&ocy;&ncy;&acy;&lcy;&icy;&zcy;&mcy; </div>
-                      <div class="term-full">&Bcy;&rcy;&icy;&gcy;&acy;&dcy;&acy; &pcy;&rcy;&ocy;&fcy;&iecy;&scy;&scy;&icy;&ocy;&ncy;&acy;&lcy;&softcy;&ncy;&ycy;&khcy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&ocy;&vcy; &pcy;&ocy; &mcy;&ocy;&ncy;&tcy;&acy;&zhcy;&ucy; &icy; &ocy;&bcy;&scy;&lcy;&ucy;&zhcy;&icy;&vcy;&acy;&ncy;&icy;&yucy;</div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/cost.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&TScy;&iecy;&ncy;&ocy;&ocy;&bcy;&rcy;&acy;&zcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;</div>
-                      <div class="term-full">&Lcy;&ucy;&chcy;&shcy;&icy;&iecy; &tscy;&iecy;&ncy;&ycy; &ncy;&acy; &rcy;&ycy;&ncy;&kcy;&iecy; &pcy;&lcy;&acy;&scy;&tcy;&icy;&kcy;&ocy;&vcy;&ycy;&khcy; &ocy;&kcy;&ocy;&ncy; </div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/mobility.svg" alt="professionality">
-                    <div class="advantage-describes mobilty-width">
-                      <div class="term-mobilty-width">&Mcy;&ocy;&bcy;&icy;&lcy;&softcy;&ncy;&ocy;&scy;&tcy;&softcy; </div>
-                      <div class="term-full-mobilty">&Zcy;&acy;&kcy;&lcy;&yucy;&chcy;&iecy;&ncy;&icy;&iecy; &dcy;&ocy;&gcy;&ocy;&vcy;&ocy;&rcy;&acy; &ncy;&acy; &dcy;&ocy;&mcy;&ucy; </div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/loyalty.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Lcy;&ocy;&yacy;&lcy;&softcy;&ncy;&ocy;&scy;&tcy;&softcy;</div>
-                      <div class="term-full">99% &kcy;&lcy;&icy;&iecy;&ncy;&tcy;&ocy;&vcy; &rcy;&iecy;&kcy;&ocy;&mcy;&iecy;&ncy;&dcy;&ucy;&yucy;&tcy; &ncy;&acy;&scy; &scy;&vcy;&ocy;&icy;&mcy; &dcy;&rcy;&ucy;&zcy;&softcy;&yacy;&mcy; </div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic" src="build/img/about-company/advantages/fast.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Scy;&kcy;&ocy;&rcy;&ocy;&scy;&tcy;&softcy;</div>
-                      <div class="term-full">&Kcy;&ocy;&rcy;&ocy;&tcy;&kcy;&icy;&iecy; &scy;&rcy;&ocy;&kcy;&icy; &ucy;&scy;&tcy;&acy;&ncy;&ocy;&vcy;&kcy;&icy; &icy;&zcy;&dcy;&iecy;&lcy;&icy;&jcy;</div>
-                    </div>
-                  </div>
-                  <div class="advantage"><img class="advantage-pic advantage-last-height" src="build/img/about-company/advantages/quality.svg" alt="professionality">
-                    <div class="advantage-describes">
-                      <div class="term">&Scy;&lcy;&ucy;&zhcy;&bcy;&acy; &kcy;&acy;&chcy;&iecy;&scy;&tcy;&vcy;&acy;</div>
-                      <div class="term-full-quality">&Bcy;&iecy;&zcy;&ucy;&pcy;&rcy;&iecy;&chcy;&ncy;&ocy;&iecy; &kcy;&acy;&chcy;&iecy;&scy;&tcy;&vcy;&ocy; &icy; &kcy;&ocy;&ncy;&tcy;&rcy;&ocy;&lcy;&softcy; &icy;&zcy;&dcy;&iecy;&lcy;&icy;&jcy; &Pcy;&Vcy;&KHcy;</div>
-                    </div>
+                <div class="about-company__information-block">
+                  <div class="regular slider">
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-1.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-2.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-3.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-4.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-5.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-1.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-2.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-3.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-4.png"></div>
+                    <div class="sertificate"><img src="../../../build/sliders/slider_sertificates/slick-1.8.1/img/sertificates-slider/sertificate-5.png"></div>
                   </div>
                 </div>
               </div>
@@ -360,7 +316,7 @@
         <div class="portfolio__block"> 
           <p class="portfolio__headline">Портфолио</p>
           <div class="portfolio__slider"> 
-            <div class="portfolio__slider_blocks-slider"> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"><img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"><img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"><img class="portfolio-img" src="build/img/portfolio/room-4.png" alt="room">
+            <div class="portfolio__slider_blocks-slider"><a href="../../../pages/pop-ups/pop-up-portfolio.html"> <img class="portfolio-img" src="build/img/portfolio/room-1.png" alt="room"></a><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-2.png" alt="room"></a><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-3.png" alt="room"></a><a href=""> <img class="portfolio-img" src="build/img/portfolio/room-4.png" alt="room"></a>
               <div class="portfolio__slider_controls">
                 <svg class="arrow-left" xmlns="http://www.w3.org/2000/svg" width="26" height="50" viewbox="0 0 26 50" fill="none">
                   <path d="M25 0.812988L1 24.813L25 48.813" stroke="black"></path>
@@ -483,6 +439,16 @@
     <script src="build/tabs/carousel-18/js/bootstrap.min.js"></script>
     <script src="build/tabs/carousel-18/js/owl.carousel.min.js"></script>
     <script src="build/tabs/carousel-18/js/main.js"></script>
-    <script src="build/js/questions-answer__list.js"></script>
+    <script src="build/sliders/slider_sertificates/slick-1.8.1/slick/slick.js"></script>
+    <script type="text/javascript">
+      $(document).on('ready',function () {
+      $(".regular").slick({
+      dots: true,
+      infinite: true,
+      slidesToShow: 1,
+      slidesToScroll: 1
+      });
+      });
+    </script>
   </body>
 </html>
